Made a few minor changes to styling charts

--- a/index.html
+++ b/index.html
@@ -360,6 +360,17 @@
                         borderWidth: 3
                     }
                 },
+                scales: {
+                    r: { // 'r' for radial axes in Chart.js 3.x
+                        grid: {
+                            color: 'purple'
+                        },
+                        ticks: {
+                            fontColor: '#FFFFFF', // White color for better visibility
+                            // Include other properties as needed
+                        }
+                    }
+                }
             }
         });
 
@@ -413,6 +424,17 @@
                         borderWidth: 3
                     }
                 },
+                scales: {
+                    r: { // 'r' for radial axes in Chart.js 3.x
+                        grid: {
+                            color: 'purple'
+                        },
+                        ticks: {
+                            fontColor: '#FFFFFF', // White color for better visibility
+                            // Include other properties as needed
+                        }
+                    }
+                }
             }
         });
 
